fix(array_list): replace List to Arrays for better compatibility in Java 8